tests/ui/attributes/link-dl.default_fcw.stderr
error[E0539]: malformed `link` attribute input
  --> $DIR/link-dl.rs:14:1
   |
LL | #[link="dl"]
   | ^^^^^^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link-attribute>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[link="dl"]
LL + #[link(name = "...")]
   |
LL - #[link="dl"]
LL + #[link(name = "...", import_name_type = "decorated|noprefix|undecorated")]
   |
LL - #[link="dl"]
LL + #[link(name = "...", kind = "dylib|static|...")]
   |
LL - #[link="dl"]
LL + #[link(name = "...", kind = "dylib|static|...", wasm_import_module = "...", import_name_type = "decorated|noprefix|undecorated")]
   |
   = and 1 other candidate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0539`.
